#PK-681 Order Transactions

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1288,6 +1288,20 @@
     "AreYouSureToUpdateBFreeze?": "Are You Sure To Update B-Freeze ?",
     "AreYouSureToUpdateBNFrozen?": "Are You Sure To Update B-Frozen ?",
     "PleaseSelectOrderItem": "Please select a Order Items before editing.",
+    "CashFlowReconciliation": "Cash Flow Reconciliation",
+    "Enum:TransactionType.0": "Payment",
+    "Enum:TransactionType.1": "Refund",
+    "Enum:TransactionType.2": "Returned",
+    "Enum:TransactionType.3": "Exchange",
+    "Enum:TransactionStatus.0": "Pending",
+    "Enum:TransactionStatus.1": "Successful",
+    "Enum:TransactionStatus.2": "Failed",
+    "Enum:PaymentChannel.0": "Ec Pay",
+    "Enum:PaymentChannel.1": "Line Pay",
+    "Enum:PaymentChannel.2": "Cash on Delivery",
+    "TransactionType": "Transaction Type",
+    "TransactionStatus": "Transaction Status",
+    "PaymentChannel": "Payment Channel",
     "DoYouApprovetheRefund": "Do you approve the refund?",
     "RefundApprovel": "Refund Approvel",
     "Wouldyouliketoproceedwiththerefund": "Would you like to proceed with the refund ?",
