--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -173,8 +173,9 @@
     "GenerateSKU": "產生SKU",
     "Get": "獲得",
     "GoodPoint": "點點",
-    "GreenWorldLogistics": "綠界物流B2C",
-    "GreenWorldLogisticsC2C": "綠界物流C2C",
+    "GreenWorldLogistics": "綠界超商B2C",
+    "GreenWorldLogisticsC2C": "綠界超商C2C",
+    "EcPayHomeDelivery": "綠界宅配",
     "TCat": "黑貓宅急便",
     "Greetings": "開頭訊息",
     "GroupBuyBanner": "團購橫幅",
@@ -192,7 +193,7 @@
     "HashIV": "Hash IV",
     "HashKey": "Hash Key",
     "HideCredention": "團購報表隱藏部分個資",
-    "HomeDelivery": "親送",
+    "HomeDelivery": "自行運送",
     "OrderDetailsHomeDelivery": "送貨上門",
     "Hsinchu": "新竹市",
     "Hualien": "花蓮縣",
@@ -1071,8 +1072,8 @@
     "DeclaredValue": "申報價值",
     "ReverseLogisticShippingFee": "逆向物流運費",
     "t-CatNormal": "黑貓常溫",
-    "t-CatFreeze": "綠界 | 黑貓宅急便 (冷藏)",
-    "t-CatFrozen": "綠界 | 黑貓宅急便 (冷凍)",
+    "t-CatFreeze": "黑貓冷藏",
+    "t-CatFrozen": "黑貓冷凍",
     "7-11Normal": "7-11常溫",
     "7-11Freeze": "7-11冷藏",
     "7-11Frozen": "7-11冷凍",
