--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -158,6 +158,7 @@
     "FamilyMart1": "綠界 | 全家",
     "FamilyMartC2c": "綠界 | 全家 C2C",
     "FamilyMartC2C": "綠界 | 全家 C2C",
+    "FamilyMartC2C_2": "全家 C2C",
     "Filter": "篩選",
     "First": "前置",
     "Footer": "結尾訊息",
@@ -414,6 +415,7 @@
     "PleaseContactUs": "取貨前line@客服聯繫",
     "PleaseEnterThresholdAmount": "請輸入免運門檻",
     "PostOffice": "綠界 | 中華郵政",
+    "PostOffice_2": "中華郵政",
     "PreorderQuantity": "預購數量",
     "PrepareShipment": "處理中",
     "Preview": "預覽",
