Commit For Pk-1139

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -932,6 +932,11 @@
     "Enum:ColorScheme.3": "Deep Sea Night",
     "Enum:ColorScheme.4": "Sweet Apricot Cream",
     "Enum:ColorScheme.5": "Desert Dawn",
+    "Enum:ColorSchemeFile.1": "Forest Dawn",
+    "Enum:ColorSchemeFile.2": "Tropical Sunset",
+    "Enum:ColorSchemeFile.3": "Deep Sea Night",
+    "Enum:ColorSchemeFile.4": "Sweet Apricot Cream",
+    "Enum:ColorSchemeFile.5": "Desert Dawn",
     "AddModule": "Add Module",
     "DisplayMethodForProductDetails": "Display Method For Product Details",
     "ChooseMethod": "Choose a Method",
