#PK-1174 Redesign login page

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1314,6 +1314,13 @@
     "Wouldyouliketoproceedwiththerefund": "Would you like to proceed with the refund ?",
     "Areyousureyouwanttoreturnthisorder": "Are You Sure You Want To Return This Order ?",
     "OnlyOneB2COrC2CCanBeEnabledFamilyMart": "Only one of Family Mart B2C or C2C can be enabled at once.",
-    "OnlyOneB2COrC2CCanBeEnabled711": "Only one of 7-11 B2C or C2C can be enabled at once."
+    "OnlyOneB2COrC2CCanBeEnabled711": "Only one of 7-11 B2C or C2C can be enabled at once.",
+    "Login:ECommercePlatform": "E-commerce",
+    "Login:AdministratorLogin": "Administrator Login",
+    "Login:EnterAccountPassword": "Please enter your account password",
+    "Login:FillOutField": "Please fill out this field.",
+    "Login:UsernameOrEmailAddress": "Username or Email Address",
+    "Login:Password": "Password",
+    "Login:RememberMe": "Remember Me"
   }
 }
