Fix for Pk-1150

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1326,10 +1326,10 @@
     "ECPay|BlackCat1": "ECPay | B-Normal",
     "ECPay|BlackCatFreeze": "ECPay | B-Freeze",
     "ECPay|BlackCatFrozen": "ECPay | B-Frozen",
-    "ECPay|SevenToEleven1": "ECPay | 7-11",
-    "ECPay|SevenToElevenFrozen": "ECPay | 7-11 Frozen",
+    "ECPay|SevenToEleven1": "ECPay | 7-11 B2C",
+    "ECPay|SevenToElevenFrozen": "ECPay | 7-11 Frozen B2C",
     "ECPay|SevenToElevenC2C": "ECPay | 7-11 C2C",
-    "ECPay|FamilyMart1": "ECPay | Family Mart",
+    "ECPay|FamilyMart1": "ECPay | Family Mart B2C",
     "ECPay|FamilyMartC2C": "ECPay | Family Mart C2C",
     "HualienAndTaitungShippingFee": "Hualien and Taitung Shipping Fee",
     "HolidaySurcharge": "Holiday Surcharge",
