--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1397,10 +1397,10 @@
     "ECPay|BlackCat1": "綠界 | 黑貓宅急便",
     "ECPay|BlackCatFreeze": "綠界 | 黑貓冷藏",
     "ECPay|BlackCatFrozen": "綠界 | 黑貓冷凍",
-    "ECPay|SevenToEleven1": "綠界 | 7-11",
-    "ECPay|SevenToElevenFrozen": "綠界 | 7-11 冷凍",
+    "ECPay|SevenToEleven1": "綠界 | 7-11 B2C",
+    "ECPay|SevenToElevenFrozen": "綠界 | 7-11 冷凍 B2C",
     "ECPay|SevenToElevenC2C": "綠界 | 7-11 C2C",
-    "ECPay|FamilyMart1": "綠界 | 全家",
+    "ECPay|FamilyMart1": "綠界 | 全家 B2C",
     "ECPay|FamilyMartC2C": "綠界 | 全家 C2C",
     "HualienAndTaitungShippingFee": "花東地區運費",
     "HolidaySurcharge": "繁盛期加給",
