#PK-1196 Implementing dashboard on homepage

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1343,6 +1343,13 @@
     "All": "All",
     "NewMembers": "New Members",
     "ExistingMembers": "Existing Members",
-    "NewMember": "New Member"
+    "NewMember": "New Member",
+    "TimeRange": "Time Range",
+    "TotalOrders": "Total Orders",
+    "TotalSales": "Total Sales",
+    "TotalProducts": "Total Products",
+    "RecentOrders": "Recent Orders",
+    "BestSellers": "Best Sellers",
+    "ViewAll": "View All"
   }
 }
