--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1413,6 +1413,13 @@
     "All": "全部",
     "NewMembers": "新會員",
     "ExistingMembers": "現有會員",
-    "NewMember": "新會員"
+    "NewMember": "新會員",
+    "PaymentDeadline": "付款有效期設定",
+    "OrderValidityUnit": "單位",
+    "ValidatePeriod": "期限",
+    "LinePointsRedemption": "折抵Line Points",
+    "Days": "天",
+    "Hours": "小時",
+    "Miniutes": "分鐘"
   }
 }
