Commit For Pk-1224

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1367,6 +1367,7 @@
     "BasedOnAmount": "Based On Amount",
     "BasedOnCount": "Based On Count",
     "SelectLogistics": "Select Logistics",
-    "SelectDeliveryMethod": "Select Delivery Method"
+    "SelectDeliveryMethod": "Select Delivery Method",
+    "Return&Exchang": "Return & Exchang"
   }
 }
