Commit For Pk-1226

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1368,6 +1368,7 @@
     "BasedOnCount": "Based On Count",
     "SelectLogistics": "Select Logistics",
     "SelectDeliveryMethod": "Select Delivery Method",
-    "Return&Exchang": "Return & Exchang"
+    "Return&Exchange": "Return & Exchange",
+    "Filters": "Filters"
   }
 }
