--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1369,6 +1369,8 @@
     "SelectLogistics": "Select Logistics",
     "SelectDeliveryMethod": "Select Delivery Method",
     "Return&Exchange": "Return & Exchange",
-    "Filters": "Filters"
+    "Filters": "Filters",
+    "Active": "Active",
+    "Inactive": "Inactive"
   }
 }
