--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1424,7 +1424,9 @@
     "SelectLogistics": "選擇物流商",
     "SelectDeliveryMethod": "選擇物流方式",
     "Return&Exchange": "退換貨列表退換貨列表",
-    "Filters": "篩選器"
+    "Filters": "篩選器",
+    "Active": "上架中",
+    "Inactive": "已下架"
 
   }
 }
