#PK-1196 Dashboard localization

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1344,6 +1344,7 @@
     "NewMembers": "New Members",
     "ExistingMembers": "Existing Members",
     "NewMember": "New Member",
+    "NewMembersDashboard": "New Members",
     "TimeRange": "Time Range",
     "TotalOrders": "Total Orders",
     "TotalSales": "Total Sales",
