#PK-1198 Blacklist in Order Details

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -657,7 +657,11 @@
     "LoginMethod": "Login Method",
     "DataManagement": "Data Management",
     "DeleteAccount": "Delete Account",
+    "AddToBlacklist": "Blacklist Customer",
+    "RemoveFromBlacklist": "Remove Blacklist",
     "DeleteMemberCautionMessage": "Remove this customer's chart if requested, if not please be aware that what has been deleted can never be brought back.",
+    "BlacklistMemberCautionMessage": "Add this customer to blacklist. Please be aware that this customer won't be able to create an order until this customer is blacklisted.",
+    "RemoveBlacklistMemberCautionMessage": "Remove this customer from blacklist. Please be aware that this customer can not create an order until removed from blacklist.",
     "AreYouSureToDeleteThisMember": "Please be aware that once this member is deleted, it can never be restored. Do you wish to delete it?",
     "EditMember": "Edit Member",
     "FullName": "Full Name",
