--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -694,7 +694,11 @@
     "LoginMethod": "登入方式",
     "DataManagement": "資料管理",
     "DeleteAccount": "刪除帳號",
+    "AddToBlacklist": "加入黑名單",
+    "RemoveFromBlacklist": "移除黑名單",
     "DeleteMemberCautionMessage": "請在收到需求後才進行刪除,已刪除的資料將無法復原",
+    "BlacklistMemberCautionMessage": "將此客戶加入黑名單。請注意，在被列入黑名單之前，此客戶將無法建立訂單。",
+    "RemoveBlacklistMemberCautionMessage": "將此客戶從黑名單移除。請注意，在從黑名單移除之前，此客戶無法建立訂單。",
     "AreYouSureToDeleteThisMember": "請注意,如果刪除該會員後將無法在恢復,確認是否刪除?",
     "EditMember": "編輯會員",
     "FullName": "姓名",
