--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1,6 +1,7 @@
 {
   "culture": "zh-Hant",
   "texts": {
+    "LoginType": "登入類型",
     "Pikachu:EnterprisePurchaseCanOnlyUseSelfPickup": "企業採購只能使用自提",
     "ProductRankingCarouselModule": "商品排行模組",
     "OrderInstruction": "流程簡介模組",
