#PK-1265 background job to update tiers when tier settings update

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1390,7 +1390,7 @@
     "MemberTags": "Member Tags",
     "MemberStatus": "Member Status",
     "VipTier": "Vip Tier",
-
-    "CreationTime": "創建時間"
+    "CreationTime": "創建時間",
+    "Permission:VipTierSettings": "Vip Tier Settings"
   }
 }
